objects/SBQQ__ProductAction__c.object
<CustomObject>
    <description>Action taken when Product Rule fires.</description>
    <fields>
        <fullName>SBQQ__FilterField__c</fullName>
        <inlineHelpText>Select the field you want updated when the rule is triggered.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <inlineHelpText>Enter the value you want updated in the Filter Field selected.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <inlineHelpText>Select the operator that determines how you want the Filter Field applied using the Filter Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the product you want automatically selected on the quote.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Actions</relationshipLabel>
        <relationshipName>ProductActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you want the product in the Product lookup field to be selected on the quote.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <inlineHelpText>Rule that runs this product action.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of action.</description>
        <inlineHelpText>Specify the type of action.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Enable &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Disable &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Hide &amp; Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Action</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Product Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>